Added note that the extension is for Chrome

--- a/README
+++ b/README
@@ -8,8 +8,8 @@ DESCRIPTION
     due to copyright disputes, account termination, etc. While other bookmark
     cleaners work well for finding broken links and duplicates, they do not
     work on YouTube™ videos because they always return successful HTTP status
-    codes, even when the video has been deleted. This extension fills that gap
-    by verifying the status of each video using the YouTube™ Data API.
+    codes, even when the video has been deleted. This Chrome extension fills
+    that gap by verifying the status of each video using the YouTube™ Data API.
 
 AUTHOR
     Roberto Gomez, Jr.
